--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@prismicio/react": "^2.7.4",
     "next": "^14.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.38",
