--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prismicio/client": "^7.5.0",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.4",
+    "framer-motion": "^11.2.10",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
